kube-manifests/k8s-app-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  flaskapp-deployment  
  namespace: default
  labels:
    app:  flaskapp
spec:
  selector:
    matchLabels:
      app: flaskapp
  replicas: 3
  template:
    metadata:
      labels:
        app:  flaskapp
    spec:
      containers:
      - name:  flaskapp
        image:  rsxyz123/flaskapp:latest
        ports:
        - containerPort:  8080
          name:  flaskapp
