kube-manifests/k8s-app-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-nodeport-service 
  namespace: default
  labels:
    app: flaskapp
spec:
  selector:
    app: flaskapp
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
